# StreamLine

./: .gitignore  HANDOFF.md  LICENSE  README.md  Readme_upd.md  contnet.md  package-lock.json  package.json
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  keeper-entrypoint.sh  railway.json
backend/crates/core/: Cargo.toml
backend/crates/core/src/: events.rs  lib.rs  math.rs  sui.rs  types.rs
backend/crates/indexer/: Cargo.toml
backend/crates/indexer/src/: api.rs  config.rs  db.rs  main.rs  poller.rs  schema.sql  state.rs
backend/crates/keeper/: Cargo.toml
backend/crates/keeper/src/: config.rs  db.rs  main.rs  sui_cli.rs
circuits/: .gitignore  package-lock.json  package.json
circuits/converter/: Cargo.toml
circuits/converter/src/: main.rs
circuits/inputs/: transfer.json  unwrap.json  wrap.json
circuits/move/: Move.toml
circuits/move/tests/: confidential_tests.move  groth16_poc_tests.move  lazydrip_tests.move  poseidon_compat_tests.move
circuits/prover/: prove.mjs  serialize.mjs
circuits/scripts/: build.sh  prove.sh
circuits/src/: deposit.circom  lazydrip.circom  multiplier.circom  private_settle.circom  shielded.circom  transfer.circom  unwrap.circom  withdraw.circom  wrap.circom
circuits/src/lib/: commitment.circom
contracts/: Move.toml  Published.toml  README.md  deployment.testnet.json
contracts/sources/: collateral.move  confidential_balance.move  giftcard.move  lazy_stream.move  merkle_tree.move  pos.move  private_stream.move  protocol_registry.move  shielded_pool.move  stream.move  treasury.move  yield_vault.move
contracts/tests/: auto_yield_tests.move  confidential_balance_tests.move  confidential_stream_tests.move  giftcard_tests.move  lazy_stream_tests.move  lending_tests.move  merkle_tree_tests.move  payroll_pool_tests.move  pos_tests.move  private_stream_tests.move  shielded_pool_tests.move  stream_tests.move  treasury_tests.move  yield_vault_tests.move
docs/: README.md  about-project.md  complete-privacy-build.md  confidential-streaming-plan.md  frontend.md  privacy-seal-plan.md  requirements.md  tech.md
frontend/: .env.example  .gitignore  README.md  _st.mjs  dp.mjs  frontend_shielded_test.mjs  fsp.mjs  next.config.mjs  package-lock.json  package.json  wp.mjs
frontend/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
frontend/.next/cache/: .previewinfo  .rscinfo  .tsbuildinfo
frontend/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  (+3 more)
frontend/scripts/: smoke-payroll-pool.ts  test-compliance.ts  test-giftcard.ts
mock-usdc/: Move.toml  Published.toml  README.md  deployment.testnet.json
mock-usdc/sources/: mock_usdc.move
(+275 files in other folders)
