[workspace]
resolver = "2"
members = ["crates/core", "crates/indexer", "crates/keeper"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/minrawsjar/StreamLine"

[workspace.dependencies]
# Shared local crate
streamline-core = { path = "crates/core" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP — Sui JSON-RPC client (no heavy sui-sdk dependency)
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }

# Web framework (indexer)
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "chrono",
] }

# Errors / logging / misc
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
