[package]
name = "streamline-keeper"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "streamline-keeper"
path = "src/main.rs"

[dependencies]
streamline-core.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
dotenvy.workspace = true
